[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/DefaultFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://KeyRebind.gd" type="Script" id=2]
[ext_resource path="res://Tilesets/BackgroundTiles.tres" type="TileSet" id=3]
[ext_resource path="res://UI/UICommandHandler.tscn" type="PackedScene" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UICommandHandler" parent="." instance=ExtResource( 4 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 1052.0
margin_top = 248.0
margin_right = 1508.0
margin_bottom = 1192.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 456.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 1 )
text = "Controls"
align = 1

[node name="WALK_LEFT" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 456.0
margin_bottom = 202.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/WALK_LEFT"]
margin_top = 3.0
margin_right = 330.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 1 )
text = "Walk Left"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/WALK_LEFT"]
margin_left = 334.0
margin_right = 394.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "A"

[node name="WALK_RIGHT" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 456.0
margin_bottom = 308.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/WALK_RIGHT"]
margin_top = 3.0
margin_right = 375.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 1 )
text = "Walk Right"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/WALK_RIGHT"]
margin_left = 379.0
margin_right = 439.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "A"

[node name="JUMP" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 456.0
margin_bottom = 414.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/JUMP"]
margin_top = 3.0
margin_right = 182.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 1 )
text = "Jump"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/JUMP"]
margin_left = 186.0
margin_right = 246.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "A"

[node name="ROLL" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 418.0
margin_right = 456.0
margin_bottom = 520.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ROLL"]
margin_top = 3.0
margin_right = 131.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 1 )
text = "Roll"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/ROLL"]
margin_left = 135.0
margin_right = 195.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "A"

[node name="RESTART" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 524.0
margin_right = 456.0
margin_bottom = 626.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/RESTART"]
margin_top = 3.0
margin_right = 256.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 1 )
text = "Restart"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/RESTART"]
margin_left = 260.0
margin_right = 320.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "A"

[node name="FULLSCREEN" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 630.0
margin_right = 456.0
margin_bottom = 732.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/FULLSCREEN"]
margin_top = 3.0
margin_right = 357.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 1 )
text = "Fullscreen"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/FULLSCREEN"]
margin_left = 361.0
margin_right = 421.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "A"

[node name="MAIN_MENU" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 736.0
margin_right = 456.0
margin_bottom = 838.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MAIN_MENU"]
margin_top = 3.0
margin_right = 392.0
margin_bottom = 99.0
custom_fonts/font = ExtResource( 1 )
text = "Main Menu"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/MAIN_MENU"]
margin_left = 396.0
margin_right = 456.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "A"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 842.0
margin_right = 456.0
margin_bottom = 944.0
custom_fonts/font = ExtResource( 1 )
text = "Back"

[node name="Background" type="TileMap" parent="."]
z_index = -10
tile_set = ExtResource( 3 )
cell_size = Vector2( 256, 256 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/WALK_LEFT/Button" to="." method="_change_key_WALK_LEFT"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/WALK_RIGHT/Button" to="." method="_change_key_WALK_RIGHT"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/JUMP/Button" to="." method="_change_key_JUMP"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ROLL/Button" to="." method="_change_key_ROLL"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/RESTART/Button" to="." method="_change_key_RESTART"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/FULLSCREEN/Button" to="." method="_change_key_FULLSCREEN"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MAIN_MENU/Button" to="." method="_change_key_MAIN_MENU"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_Back_Button_pressed"]
